--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 3000;
 
     location /{
-        root /user/shared/nginx/html;
+        root /usr/shared/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
